syntax = "proto3";

enum ResultCode {
  Success = 0; // 请求成功
  Fail = 1; // 请求失败
  ServerError = 2; // 服务器异常
  AccountExist = 3; // 账号已存在
  AccountNotExist = 4; // 账号不存在
  PasswordError = 5; // 账号或密码错误
  SmsCodeError = 6; // 短信验证码错误
  MobileNotBlank = 7; // 手机号不能为空
  PasswordNotBlank = 8; // 密码不能为空
  AccountTerminate = 9; // 账号被封禁
}

message Result {
  ResultCode code = 1; // 请求结果
}
